# aoc

./: .gitignore  Cargo.toml
aoc23/: Cargo.toml
base/: Cargo.toml
base/src/: day.rs  lib.rs
base/src/pack/: mod.rs
base/src/pack/aoc23/: day02.rs
src/: day.rs  main.rs
src/pack/: all_packs.rs  mod.rs
src/pack/aoc23/: day01.rs  day1.rs  mod.rs
src/pack/euler/: day001.rs  day002.rs  day003.rs  day004.rs  day005.rs  day006.rs  day007.rs  day008.rs  day009.rs  day010.rs  day011.rs  day012.rs  day013.rs  day014.rs  day015.rs  day016.rs  day017.rs  day018.rs  day019.rs  day020.rs  day021.rs  day022.rs  day023.rs  day024.rs  day025.rs  day026.rs  day027.rs  day028.rs  day029.rs  day030.rs  day031.rs  day032.rs  day033.rs  day034.rs  day035.rs  day036.rs  day037.rs  day038.rs  day039.rs  day040.rs  (+22 more)
