[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
itertools = "0.11.0"
memoize = "0.4.1"
num = "0.4.1"
priority-queue = "1.3.2"
