[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
itertools = "0.11.0"
log = "0.4.20"
memoize = "0.4.1"
num = "0.4.1"
pretty_env_logger = "0.5.0"
priority-queue = "1.3.2"
